# hippius-sdk

./: .env.db  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.test.yml  example_profile.json  pyproject.toml  reconstructed_test_ipfs.py  setup_database.sh  test_file.txt  test_hippius.py  test_profile.json
.github/workflows/: README.md  publish-test-pypi.yml  python-package.yml  tag-release-publish.yml
db/: README.md
db/migrations/: 20241201000001_create_key_storage_tables.sql
docs/: usage_example.py
examples/: erasure_coding_example.py  example_s3_publish.py
hippius_sdk/: __init__.py  account.py  accounts.py  api_client.py  arion.py  cli.py  cli_assets.py  cli_handlers.py  cli_handlers_account.py  cli_handlers_address.py  cli_handlers_config.py  cli_handlers_file.py  cli_handlers_miner.py  cli_parser.py  cli_rich.py  cli_ui.py  client.py  config.py  crypto.py  db_utils.py  erasure_coding.py  errors.py  hcfs.py  http_utils.py  incentives.py  ipfs.py  ipfs_core.py  key_storage.py  miner.py  substrate.py  utils.py
hippius_sdk/db/: README.md  env.db.template  setup_database.sh
hippius_sdk/db/migrations/: 20241202000001_switch_to_subaccount_encryption.sql
test_upload/: README.md  sample.json  test_file1.txt
test_upload/nested/: test_file2.txt
tests/: conftest.py  mock_arion.py  test_api_client_e2e.py  test_api_client_unit.py  test_api_integration.py  test_arion_client.py  test_cli_account.py  test_cli_account_extended.py  test_cli_address.py  test_cli_config.py  test_cli_delete.py  test_cli_download.py  test_cli_erasure.py  test_cli_files.py  test_cli_upload.py  test_config.py  test_erasure.py  test_hcfs.py  test_hippius_cli.sh  test_http_utils.py  test_ipfs.py  test_pinning_status.py  test_substrate.py  test_substrate_account.py  test_utils.py
tests/cli/: run_all_tests.sh  test_account_command.sh  test_address_command.sh  test_all_commands.sh  test_cat_command.sh  test_config_command.sh  test_credits_command.sh  test_download_command.sh  test_erasure_delete.sh  test_exists_command.sh  test_files_command.sh  test_final.sh  test_hippius_cli.sh  test_hippius_combined.sh  test_keygen_command.sh  test_miner_commands.sh  test_no_publish_flag.sh  test_pinning_status.sh  test_seed_command.sh  test_store.sh  test_store_dir.sh
