[tool.poetry]
name = "hippius-sdk"
version = "0.1.0"
description = "Python SDK for Hippius blockchain storage"
authors = ["Your Name <dubs@dubs.rs>"]
readme = "README.md"
repository = "https://github.com/thenervelab/hippius-sdk"
documentation = "https://github.com/thenervelab/hippius-sdk/docs"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [{include = "hippius_sdk"}]

[tool.poetry.dependencies]
python = "^3.8"
ipfshttpclient = "^0.8.0"
substrate-interface = "^1.4.2"
requests = "^2.28.1"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
base58 = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
