[tool.poetry]
name = "hippius"
version = "0.2.23"
description = "Python SDK and CLI for Hippius blockchain storage"
authors = ["Dubs <dubs@dubs.rs>"]
readme = "README.md"
repository = "https://github.com/thenervelab/hippius-sdk"
documentation = "https://github.com/thenervelab/hippius-sdk/docs"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [{include = "hippius_sdk"}]
include = [
    "hippius_sdk/db/**/*",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.0 || >3.9.1,<3.14"
substrate-interface = "^1.4.2"
requests = "^2.28.1"
httpx = "^0.28.1"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
base58 = "^2.1.1"
pynacl = "^1.5.0"
cryptography = "^44.0.0"
pyperclip = {version = "^1.8.2", optional = true}
asyncpg = {version = "^0.29.0", optional = true}
zfec = "^1.5.3"
mnemonic = "^0.20"
rich = "^14.0.0"

[tool.poetry.extras]
clipboard = ["pyperclip"]
key_storage = ["asyncpg"]

[tool.poetry.scripts]
hippius = "hippius_sdk.cli:main"
hippius-keygen = "hippius_sdk.cli:key_generation_cli"
hippius-setup-db = "hippius_sdk.db_utils:setup_db_cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-timeout = "^2.4.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
